# roomah

./: .gitignore  .prettierignore  PRD 3 - MVP ROOMAH.md  README.md  package-lock.json  package.json  render.yaml
.githooks/: pre-commit
.github/workflows/: ci.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  auth.py  campaigns.py  main.py  models.py  supabase.py  timeline.py  users.py
backend/app/core/: __init__.py  config.py
backend/app/routes/: auth.py  campaign_content_templates.py  campaigns.py  dashboard.py  deals.py  leads.py  manager.py  properties.py  users.py  viewings.py
backend/scripts/: _backfill_legacy_deal_types.py  _deal_pipeline_state.py  _quarter_breakdown.py  _verify_deals.py  _verify_pipeline.py  promote_manager.py  reconcile_demo_data.py  seed_deal_pipeline.py  seed_deals.py  seed_quarterly.py
backend/tests/: test_auth.py  test_cors_config.py  test_followups.py  test_team_isolation.py  test_workflows.py
frontend/: .gitignore  README.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/src/: middleware.ts
resources/: campaigns-design.json  dashboard-design.json  dashboard_v2.json  deals-design.json  leads-design.json  properties-design.json  team manager.json  viewings-design.json
supabase/migrations/: 202605241001_create_teams.sql  202605241002_create_users.sql  202605241003_create_team_config.sql  202605241004_create_leads.sql  202605241005_create_properties.sql  202605241006_create_property_images.sql  202605241007_create_lead_properties.sql  202605241009_create_deals.sql  (+19 more)
(+111 files in other folders)
