[project]
name = "roomah-backend"
version = "0.1.0"
description = "FastAPI backend for the ROOMAH CRM MVP."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "pydantic-settings>=2.6.0",
    "PyJWT[crypto]>=2.10.0",
    "python-dotenv>=1.0.1",
    "supabase>=2.10.0,<2.30.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.10.0",
    "httpx>=0.27.2",
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "httpx>=0.27.2",
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
